SERVER-37918 Improve the messaging around corrupted routing metadata